Fix spacing tokens

--- a/tokens/theme-soho/semantic-dark.scss
+++ b/tokens/theme-soho/semantic-dark.scss
@@ -155,18 +155,18 @@
   --ids-dataviz-color-sequential-08: var(--ids-color-blue-80);
   --ids-dataviz-color-sequential-09: var(--ids-color-red-30);
   // Space
-  --ids-spacing-none: var(--ids-space-00);
-  --ids-spacing-xxxxs: var(--ids-space-01);
-  --ids-spacing-xxxs: var(--ids-space-02);
-  --ids-spacing-xxs: var(--ids-space-04);
-  --ids-spacing-xs: var(--ids-space-08);
-  --ids-spacing-sm: var(--ids-space-16);
-  --ids-spacing-md: var(--ids-space-24);
-  --ids-spacing-lg: var(--ids-space-32);
-  --ids-spacing-xl: var(--ids-space-40);
-  --ids-spacing-xxl: var(--ids-space-48);
-  --ids-spacing-xxxl: var(--ids-space-56);
-  --ids-spacing-xxxxl: var(--ids-space-72);
+  --ids-space-none: var(--ids-space-00);
+  --ids-space-xxxxs: var(--ids-space-01);
+  --ids-space-xxxs: var(--ids-space-02);
+  --ids-space-xxs: var(--ids-space-04);
+  --ids-space-xs: var(--ids-space-08);
+  --ids-space-sm: var(--ids-space-16);
+  --ids-space-md: var(--ids-space-24);
+  --ids-space-lg: var(--ids-space-32);
+  --ids-space-xl: var(--ids-space-40);
+  --ids-space-xxl: var(--ids-space-48);
+  --ids-space-xxxl: var(--ids-space-56);
+  --ids-space-xxxxl: var(--ids-space-72);
   // Radii
   --ids-border-radius-none: var(--ids-border-radius-00);
   --ids-border-radius-xxs: var(--ids-border-radius-02);
